--- a/Project Proposal HTML/Index.html
+++ b/Project Proposal HTML/Index.html
@@ -11,29 +11,29 @@
         <!-- Desktop Icons -->
         <!-- ICONS (inside .desktop div) -->
         <div class="icon" tabindex="0" data-window="win-welcome">
-          <img src="images/welcome.ico" /><span>Welcome</span>
+          <img src="images/welcome.ico" alt="Welcome"/><span>Welcome</span>
         </div>
         <div class="icon" tabindex="0" data-window="win-contact">
-          <img src="images/contact%20us.ico" /><span>Contact Us</span>
+          <img src="images/contact%20us.ico" alt="Contact Us"/><span>Contact Us</span>
         </div>
         <div class="icon" tabindex="0" data-window="win-about">
-          <img src="images/about%20us.ico" /><span>About Us</span>
+          <img src="images/about%20us.ico" alt="About us"/><span>About Us</span>
         </div>
-        <div class="icon" tabindex="0" data-window="win-setup"><img src="images/setup.ico" /><span>Setup</span></div>
+        <div class="icon" tabindex="0" data-window="win-setup"><img src="images/setup.ico" alt="Windows 98 Setup"/><span>Setup</span></div>
         <div class="icon" tabindex="0" data-window="win-dev">
-          <img src="images/development.ico" /><span>Development</span>
+          <img src="images/development.ico" alt="Windows Development"/><span>Development</span>
         </div>
         <div class="icon" tabindex="0" data-window="win-explorer">
-          <img src="images/internet%20explorer.ico" /><span>Internet Explorer</span>
+          <img src="images/internet%20explorer.ico" alt="Windows 98 internet explorer"/><span>Internet Explorer</span>
         </div>
         <div class="icon" tabindex="0" data-window="win-features">
-          <img src="images/new%20to%20win98.ico" /><span>New to Windows 98</span>
+          <img src="images/new%20to%20win98.ico" alt="Features New To Windows 98"/><span>New to Windows 98</span>
         </div>
         <div class="icon" tabindex="0" data-window="win-requirements">
-          <img src="images/system%20requirements.ico" /><span>System Requirements</span>
+          <img src="images/system%20requirements.ico" alt="Windows 98 Requirements"/><span>System Requirements</span>
         </div>
         <div class="icon" tabindex="0" data-window="win-reception">
-          <img src="images/reception.ico" /><span>Reception</span>
+          <img src="images/reception.ico" alt="Windows 98 Reception"/><span>Reception</span>
         </div>
       </div>
 
