--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             personal computing.
           </p>
           <img src="images/welcome%20desktop.png" alt="Windows 98 welcome screen" />
+          <div class="window-section" style="padding-top: 10px">
+            <p>
+              This project is for a surface level understanding, for further information and reading please go here:
+            </p>
+            <a href="https://en.wikipedia.org/wiki/Windows_98" target="_blank" class="return-btn">Go to Wikipedia</a>
+          </div>
         </div>
       </div>
 
